# grapph

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md
include/: FeatureGraph.h  Graph.h  Homomorphism.h  SetFunctions.h
src/: FeatureGraph.cpp  FeatureGraphTest.cpp  Graph.cpp  GraphTest.cpp  Homomorphism.cpp  HomomorphismTest.cpp  SetFunctionsTest.cpp
